Introduced DarkMode and Polished UI